pack admin.html

--- a/src/views/panel/index.html
+++ b/src/views/panel/index.html
@@ -1,6 +1,3 @@
-<script>
-    window['isDev'] = true
-</script>
-<script src="/static/js/Tween.min.js"></script>
-<script src="/static/js/pixi.min.js"></script>
+<script src="/js/Tween.min.js"></script>
+<script src="/js/pixi.min.js"></script>
 <script src='/assets/panel.js'></script>
